# timepitch-bench

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
docs/: USAGE.md  make_charts.py  reports_design.md  resampler_findings_2026-05-23.md  session_2026-05-20.md  shepard_findings.md
reports/: 2026-05-21T19-08-29Z_shepard_t1.000_p1.000_b512_sr48000_sweep0.000.json  2026-05-21T19-08-29Z_shepard_t1.000_p1.000_b512_sr48000_sweep0.000.txt  2026-05-21T19-08-31Z_shepard_t1.000_p1.335_b512_sr48000_sweep0.000.json  2026-05-21T19-08-31Z_shepard_t1.000_p1.335_b512_sr48000_sweep0.000.txt  2026-05-21T19-08-33Z_shepard_t1.000_p2.000_b512_sr48000_sweep0.000.json  2026-05-21T19-08-33Z_shepard_t1.000_p2.000_b512_sr48000_sweep0.000.txt  2026-05-21T19-08-36Z_shepard_t1.500_p1.000_b512_sr48000_sweep0.000.json  2026-05-21T19-08-36Z_shepard_t1.500_p1.000_b512_sr48000_sweep0.000.txt  2026-05-21T19-08-38Z_shepard_t1.000_p1.000_b512_sr48000_sweep0.500.json  2026-05-21T19-08-38Z_shepard_t1.000_p1.000_b512_sr48000_sweep0.500.txt  2026-05-21T19-08-40Z_shepard_t1.000_p1.335_b512_sr48000_sweep0.500.json  2026-05-21T19-08-40Z_shepard_t1.000_p1.335_b512_sr48000_sweep0.500.txt  2026-05-21T19-08-42Z_shepard_t1.000_p2.000_b512_sr48000_sweep0.500.json  2026-05-21T19-08-42Z_shepard_t1.000_p2.000_b512_sr48000_sweep0.500.txt  2026-05-21T19-08-45Z_shepard_t1.500_p1.000_b512_sr48000_sweep0.500.json  2026-05-21T19-08-45Z_shepard_t1.500_p1.000_b512_sr48000_sweep0.500.txt
scripts/: commit-reports.sh  fetch-deps.sh
src/: build_info.h.in  fft.cpp  fft.h  main.cpp  metrics.cpp  metrics.h  provenance.cpp  provenance.h  report.cpp  report.h  resample_runner.cpp  resample_runner.h  resampler.h  resampler_libsamplerate.cpp  resampler_r8brain.cpp  resampler_registry.cpp  runner.cpp  runner.h  signals.cpp  signals.h  stretcher.h  stretcher_rubberband.cpp  stretcher_signalsmith.cpp  stretcher_soundtouch.cpp
